--- a/index.html
+++ b/index.html
@@ -1,8 +1,36 @@
+
 <html>
-  <head>
-      <meta charset='utf-8' />
-    <script src="prueba.js" 
-    type="text/javascript"></script>
-  </head>
+    <head>
+        <meta charset="utf-8"/>
+        <title>En tu cara, Casio!</title>
+        <link rel="stylesheet" type="text/css" href="css/calculadora.css" />
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+</head>
+<body>
+  <div id="wrapper">
+    <div id="contenedor">
+      <div class="tecla" id="pantalla">RESULTADO</div>
+      <div class="tecla">1</div>
+      <div class="tecla">2</div> 
+      <div class="tecla">3</div>
+      <div class="tecla">+</div>
+      <div class="tecla">4</div>
+      <div class="tecla">5</div>
+      <div class="tecla">6</div>
+      <div class="tecla">-</div>
+      <div class="tecla">7</div>
+      <div class="tecla">8</div>
+      <div class="tecla">9</div>
+      <div class="tecla">*</div>
+      <div class="tecla">C</div>
+      <div class="tecla">0</div>
+      <div class="tecla">=</div>
+      <div class="tecla">/</div>
+    </div>
+  </div>
+
+    <script src="prueba.js" type="text/javascript"></script>
+</body>
+
 </html>
-  
