--- a/index.html
+++ b/index.html
@@ -10,27 +10,27 @@
 <body>
   <div id="wrapper">
     <div id="contenedor">
-      <div class="tecla" id="pantalla">RESULTADO</div>
-      <div class="tecla">1</div>
-      <div class="tecla">2</div> 
-      <div class="tecla">3</div>
-      <div class="tecla">+</div>
-      <div class="tecla">4</div>
-      <div class="tecla">5</div>
-      <div class="tecla">6</div>
-      <div class="tecla">-</div>
-      <div class="tecla">7</div>
-      <div class="tecla">8</div>
-      <div class="tecla">9</div>
-      <div class="tecla">*</div>
-      <div class="tecla">C</div>
-      <div class="tecla">0</div>
-      <div class="tecla">=</div>
-      <div class="tecla">/</div>
+      <div class="tecla" id="pantalla"></div>
+      <div class="tecla" id="siete">7</div>
+      <div class="tecla" id="ocho">8</div> 
+      <div class="tecla" id="nueve">9</div>
+      <div class="tecla" id="suma">+</div>
+      <div class="tecla" id="cuatro">4</div>
+      <div class="tecla" id="cinco">5</div>
+      <div class="tecla" id="seis">6</div>
+      <div class="tecla" id="resta">-</div>
+      <div class="tecla" id="uno">1</div>
+      <div class="tecla" id="dos">2</div>
+      <div class="tecla" id="tres">3</div>
+      <div class="tecla" id="multiplicacion">x</div>
+      <div class="tecla" id="borrar">C</div>
+      <div class="tecla" id="cero">0</div>
+      <div class="tecla" id="igual">=</div>
+      <div class="tecla" id="division">/</div>
     </div>
   </div>
 
-    <script src="prueba.js" type="text/javascript"></script>
+    <script src="calculadora.js" type="text/javascript"></script>
 </body>
 
 </html>
