--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>En tu cara, Casio!</title>
+        <link rel="shortcut icon" href="m.bmp">
         <link rel="stylesheet" type="text/css" href="css/calculadora.css" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
